2005-05-09  Alan Horkan <horkana tcd ie>

	* help/C/gnotski.xml: Removed Known Bugs sections where not
	needed.
	
2005-06-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotski.c: Debranding.

2005-04-22  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c : Alan Horkan's PgUp/Dn puzzle switching feature request
	has been implemented.
	(new_move): Support undo of last move. If you move a block around, 
	but eventually return it to the original position, it won't count
	against you. Moves prior to the last move can not be undone.

2005-03-31  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (prepare_map): Just give the puzzle name, not "Level #:..."
	(new_move): Mark moves label for translation.

2005-03-21  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c : Minor code updates and clean up functions that didn't
	need prototypes and could use 'static' instead. 
	Use games-stock items.
	(creates_statusbar): Status now resembles gnomine and same-gnome.
	(button_release_space): Win message shortened.
	(update_menu_state): Moved, use new GtkAction functions.

2005-03-17  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (new_move): Ensure that no moves means no prior piece.

2005-03-16  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (configure_pixmaps_idle): Show error then exit when 
	rendering fails, removing stand-in pixbuf since it is no longer needed.
	(new_move): Don't add to the move total when it's the same piece 
	moved as last time.
	* help/C/gnotski.xml: Checked and removed FIXME in docs.

2005-03-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotski.c (prepare_map): Fix a typo (bug #167275).

2005-03-03  Richard Hoelscher  <rah@rahga.com>

	* help/C/gnotski.xml: Update documentation for 2.10
	* help/C/figures/*.png: Update screenshots.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnotski.xml: Bump the app version number. No revisions.

2005-02-17  Richard Hoelscher  <rah@rahga.com>
